--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "type": "module",
   "scripts": {
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
+    "build:profile": "next build --profile",
     "check": "next lint && tsc --noEmit",
     "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "perf:lighthouse": "lighthouse http://localhost:3000 --output=json --output-path=./lighthouse-report.json",
+    "perf:bundle-size": "npx @next/bundle-analyzer",
+    "perf:test": "node scripts/performance-test.js",
+    "perf:analyze": "npm run build:analyze && npm run perf:test",
+    "perf:full": "npm run perf:test && npm run perf:lighthouse"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
@@ -68,7 +76,9 @@
     "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0"
+    "typescript-eslint": "^8.27.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "@next/bundle-analyzer": "^15.2.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
